Fix tooltip formatting, fix dark mode support

--- a/src/stats/stats.css
+++ b/src/stats/stats.css
@@ -6,8 +6,9 @@
   background-color: var(--bs-gray-800);
   padding: 0.5rem;
   font-size: 1rem;
-  outline: 2px solid var(--bs-gray-700);
+  border: 2px solid var(--bs-gray-700);
   border-radius: 0.5rem;
+  z-index: 10;
 }
 
 .tick > text {
